# Playground

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  README.md  THIRD-PARTY-LICENSES.md  vcpkg.json
.github/: copilot-instructions.md
docs/: coordinate_system.md
example01/: main.cpp
example02/: Application.cpp  Application.h  main.cpp
example03/: Application.cpp  Application.h  main.cpp
example04/: Application.cpp  Application.h  main.cpp
example05/: Application.cpp  Application.h  main.cpp
example06/: Application.cpp  Application.h  main.cpp
resources/images/: color_grid.exr  day_environment.exr
resources/shaders/: brdf_lut.slang  colored_triangle.slang  colorspace.slang  compute_grey.slang  compute_grey.spirv  geometry.slang  ibl_diffuse.slang  ibl_specular.slang  math.slang  pbr.slang  sampling.slang  test_glsl.vert  textured_quad.slang  tonemapping.slang
src/core/: core.h
src/core/color/: cie_XYZ_cmf.cpp  cie_XYZ_cmf.h  convert.cpp  convert.h  types.h
src/core/image/: image_data.cpp  image_data.h
src/core/io/: binary_data.cpp  binary_data.h  filesystem.cpp  filesystem.h
src/core/math/: RandomGenerator.cpp  RandomGenerator.h  aabb.cpp  aabb.h  debug.cpp  debug.h  frustum.cpp  frustum.h  helper.cpp  helper.h  interpolate.cpp  interpolate.h  matrix.cpp  matrix.h  matrix_camera.cpp  matrix_camera.h  matrix_transform.cpp  matrix_transform.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  quaternion_transform.cpp  quaternion_transform.h  ray.cpp  ray.h  real_spherical_harmonics.cpp  real_spherical_harmonics.h  rsh_rotation.cpp  rsh_rotation.h  sphere.cpp  sphere.h  spherical_coordinate.cpp  spherical_coordinate.h  vector.cpp  vector.h
src/core/parser/: ebnf.h  ebnf_base.h  ebnf_character_rule.h  ebnf_conjunction.h  ebnf_escape.h  ebnf_exclude.h  ebnf_factor.h  ebnf_terminal.h  parser.h
src/core/templates/: Filter.h
src/core/utility/: DeltaTime.cpp  DeltaTime.h  base64.cpp  base64.h  convert.cpp  convert.h  generator.cpp  generator.h  gzip.cpp  gzip.h  strings.cpp  strings.h
src/cpu/: cpu.h
src/cpu/ai/: MultiLayerPerceptron.cpp  MultiLayerPerceptron.h  activation_functions.cpp  activation_functions.h  loss_functions.cpp  loss_functions.h
src/cpu/geometry/: MeshData.h  mesh_generator.cpp  mesh_generator.h
src/engine/: engine.h
src/engine/renderer/: renderer.h
src/engine/renderer/geometry/: AGeometry.cpp  AGeometry.h
src/engine/renderer/material/: MaterialShader.cpp  MaterialShader.h  Texture2DSampler.cpp  Texture2DSampler.h
src/engine/renderer/scene/: Renderable.cpp  Renderable.h  UniformData.h
src/engine/runtime/: IApplication.h  VulkanRuntime.cpp  VulkanRuntime.h  runtime.h
src/gpu/: gpu.h
src/gpu/shader/: shader.h
src/gpu/shader/glsl/: glsl_build.cpp  glsl_build.h
src/gpu/shader/slang/: slang_build.cpp  slang_build.h
src/gpu/shader/spirv/: spirv_convert.cpp  spirv_convert.h  spirv_data.h  spirv_io.cpp  spirv_io.h
src/gpu/vulkan/: vulkan.h
src/gpu/vulkan/builder/: VulkanGraphicsPipelineBuilder.cpp  VulkanGraphicsPipelineBuilder.h  vulkan_device_memory.cpp  vulkan_device_memory.h  vulkan_resource.cpp  vulkan_resource.h
src/gpu/vulkan/factory/: VulkanBufferFactory.cpp  VulkanBufferFactory.h  VulkanCommandBufferFactory.cpp  VulkanCommandBufferFactory.h  VulkanCommandPoolFactory.cpp  VulkanCommandPoolFactory.h  VulkanComputePipelineFactory.cpp  VulkanComputePipelineFactory.h  VulkanDescriptorSetLayoutFactory.cpp  VulkanDescriptorSetLayoutFactory.h  VulkanDeviceFactory.cpp  VulkanDeviceFactory.h  VulkanDeviceMemoryFactory.cpp  VulkanDeviceMemoryFactory.h  VulkanFenceFactory.cpp  VulkanFenceFactory.h  (+16 more)
test/: core_color_test.cpp  core_image_test.cpp  core_math_test.cpp  core_parser_test.cpp  core_rsh_rotation_test.cpp  core_utility_test.cpp  cpu_ai_test.cpp  cpu_geometry_test.cpp  engine_geometry_test.cpp  engine_material_test.cpp  engine_renderer_test.cpp  engine_texture_test.cpp  gpu_glsl_test.cpp  gpu_pbr_brdf_test.cpp  gpu_pbr_ibl_test.cpp  gpu_slang_test.cpp  gpu_spirv_test.cpp  gpu_transfer_test.cpp  gpu_uniform_block_test.cpp  gpu_vulkan_test.cpp
tools/: generate_cpp_class.py
(+55 files in other folders)
